Improving some selectors

--- a/scss/canvas/_canvas-node-only-text.scss
+++ b/scss/canvas/_canvas-node-only-text.scss
@@ -3,7 +3,7 @@
         box-shadow: none;
         background: none;
     }
-    &:not(:is(.is-dragging, :hover)) .canvas-node-container {
+    &:not(:is(.is-dragging, *:hover)) .canvas-node-container {
         border: none;
     }
     .canvas-node-content {
