--- a/scss/canvas/_canvas-node-title-poster.scss
+++ b/scss/canvas/_canvas-node-title-poster.scss
@@ -2,7 +2,7 @@
     .canvas-node-container {
         border: none;
     }
-    &:not(:is(.is-dragging, :hover)) .canvas-node-container {
+    &:not(:is(.is-dragging, *:hover)) .canvas-node-container {
         box-shadow: none;
     }
     .canvas-node-content {
