--- a/scss/editor/_properties.scss
+++ b/scss/editor/_properties.scss
@@ -1,5 +1,4 @@
-
-@forward '../shared/workleaves';
+@forward "../shared/workleaves";
 
 body {
     --properties-columns: 2;
@@ -25,25 +24,25 @@ body {
     .metadata-properties-heading .collapse-indicator {
         inset-inline-start: 0;
     }
-    
+
     .metadata-properties-heading {
         --heading-padding-inline: var(--size-4-6);
         position: absolute;
         top: 0;
         transform: translateY(calc(-50% + 0.05em));
-        background: linear-gradient(to right,
+        background: linear-gradient(
+            to right,
             transparent,
             var(--workleaves-background) var(--heading-padding-inline),
             var(--workleaves-background) calc(100% - var(--heading-padding-inline)),
-            transparent 100%);
+            transparent 100%
+        );
         background-size: 100% 5px;
         background-repeat: no-repeat;
         background-position: center calc(50% + 1px);
         padding-inline: var(--heading-padding-inline);
     }
 }
-
-
 
 .workspace > .workspace-split:not(.mod-root) [data-type="markdown"] .metadata-container {
     --metadata-padding: 0.5em 0 0 0;
