--- a/scss/editor/callouts/_callout-autopsy.scss
+++ b/scss/editor/callouts/_callout-autopsy.scss
@@ -377,15 +377,6 @@
             right: calc(100cqw - var(--left)); /* must compute from the right because we use row-reverse */
             top: var(--top);
         }
-
-        .task-list-item:hover {
-            --padding-x: 5px;
-            --padding-y: 5px;
-            font-size: unset; /* Show the label */
-            background: rgba(var(--mono-rgb-0), 1); /* Show the background */
-            border-radius: var(--radius-m);
-            z-index: 1;
-        }
     }
 
     .callout[data-callout="footnote"] {
@@ -396,6 +387,17 @@
         .callout-content {
             text-align: center;
         }
+    }
+}
+
+@media (hover: hover) {
+    .callout[data-callout="autopsy"] .callout[data-callout="body"] .task-list-item:hover {
+        --padding-x: 5px;
+        --padding-y: 5px;
+        font-size: unset; /* Show the label */
+        background: rgba(var(--mono-rgb-0), 1); /* Show the background */
+        border-radius: var(--radius-m);
+        z-index: 1;
     }
 }
 
