--- a/scss/editor/callouts/_callout-cards-deck.scss
+++ b/scss/editor/callouts/_callout-cards-deck.scss
@@ -1,4 +1,4 @@
-@use '../../mixins/cards-deck';
+@use "../../mixins/cards-deck";
 
 .callout[data-callout="cards-deck"] {
     --callout-icon: lucide-layers;
@@ -44,19 +44,28 @@
     }
 }
 
-body:not(.is-ios) .callout[data-callout="cards-deck"] .callout-content > p::-webkit-scrollbar{
+@media (hover: hover) {
+    .callout[data-callout="cards-deck"] .callout-content > p {
+        @include cards-deck.cards-deck-hover;
+    }
+}
+
+body:not(.is-ios) .callout[data-callout="cards-deck"] .callout-content > p::-webkit-scrollbar {
     width: var(--deck-scrollbar-width);
     height: var(--deck-scrollbar-width);
 }
 
-
 /* Remove code bellow in case of performance issues */
 
 .callout[data-callout="cards-deck"] .callout-content > p {
-    > span > img:hover,
-    > a > span > img:hover {
-        @include cards-deck.card-hover;
-    }
-
     @include cards-deck.card-not-hover;
+}
+
+@media (hover: hover) {
+    .callout[data-callout="cards-deck"] .callout-content > p {
+        > span > img:hover,
+        > a > span > img:hover {
+            @include cards-deck.card-hover;
+        }
+    }
 }
