--- a/scss/editor/callouts/_callout-clue.scss
+++ b/scss/editor/callouts/_callout-clue.scss
@@ -110,7 +110,10 @@
             opacity: 0.5;
         }
     }
-    > .callout-title:hover .callout-icon {
+}
+
+@media (hover: hover) {
+    .callout[data-callout="clue"] > .callout-title:hover .callout-icon {
         opacity: 1;
     }
 }
