--- a/scss/editor/embeds/_embeds.scss
+++ b/scss/editor/embeds/_embeds.scss
@@ -1,6 +1,6 @@
 @use "audio-cassette";
 @use "embed-background-image";
-@use "embed-faded";
+//@use "embed-faded";
 @use "embed-full-width-image";
 @use "embed-pdfs";
 @use "embed-wide";
