--- a/scss/window/_scrollbar.scss
+++ b/scss/window/_scrollbar.scss
@@ -2,12 +2,7 @@ body {
     --scrollbar-width-base: 10px;
 }
 
-body:not(.is-ios) {
+body:not(.is-ios, .is-android) {
     --scrollbar-thumb-bg: var(--color-base-20);
     --scrollbar-width: var(--scrollbar-width-base, 10px);
-}
-
-body:not(.native-scrollbars):not(.is-ios) ::-webkit-scrollbar {
-    width: var(--scrollbar-width);
-    height: var(--scrollbar-width);
 }
