--- a/scss/cssclasses/_banner.scss
+++ b/scss/cssclasses/_banner.scss
@@ -1,14 +1,17 @@
-@forward '../shared/markdown-container';
-@forward '../shared/markdown-anchor';
-@forward '../shared/file-margins';
+@forward "../shared/markdown-container";
+@forward "../shared/markdown-anchor";
+@forward "../shared/file-margins";
 
-$img-embed-sel: '.mod-header + div + div > p > .image-embed:nth-child(1 of .image-embed)';
-$img-embed-sel-print: '.mod-frontmatter + div > p > .image-embed:nth-child(1 of .image-embed)';
+$img-embed-sel: ".mod-header + div + div > p > .image-embed:nth-child(1 of .image-embed)";
+$img-embed-sel-print: ".mod-frontmatter + div > p > .image-embed:nth-child(1 of .image-embed)";
 
 body {
     --banner-height: 300px;
     --banner-title-shadow-size: 0.5em;
-    --banner-title-shadow: 0px 0px calc(var(--banner-title-shadow-size) * 0.2) rgb(var(--mono-rgb-0)), 0px 0px calc(var(--banner-title-shadow-size) * 0.5) rgb(var(--mono-rgb-0)), 0px 0px var(--banner-title-shadow-size) rgb(var(--mono-rgb-0));
+    --banner-title-shadow:
+        0px 0px calc(var(--banner-title-shadow-size) * 0.2) rgb(var(--mono-rgb-0)),
+        0px 0px calc(var(--banner-title-shadow-size) * 0.5) rgb(var(--mono-rgb-0)),
+        0px 0px var(--banner-title-shadow-size) rgb(var(--mono-rgb-0));
     --banner-slope-angle: 4deg;
     --banner-slope-border-width: 5px;
     --banner-slope-border-color: var(--color-accent);
@@ -30,7 +33,6 @@ body {
 
     width: var(--banner-width);
     height: var(--banner-height);
-
 
     img {
         width: 100%;
@@ -122,7 +124,7 @@ body {
 
 .markdown-preview-view.banner.banner-title {
     --inline-title-line-height: 3;
-    
+
     .inline-title {
         position: absolute;
         top: calc(var(--banner-height) * 0.5);
@@ -147,7 +149,12 @@ body {
     background-color: var(--banner-slope-border-color);
 
     img {
-        clip-path: polygon(0 0, 100% 0, 100% calc(100% - var(--banner-angle-height) - var(--banner-slope-border-width)), 0 calc(100% - var(--banner-slope-border-width)));
+        clip-path: polygon(
+            0 0,
+            100% 0,
+            100% calc(100% - var(--banner-angle-height) - var(--banner-slope-border-width)),
+            0 calc(100% - var(--banner-slope-border-width))
+        );
     }
 }
 
@@ -176,18 +183,19 @@ body {
 
 @supports (top: anchor(--anchor-preview-section top)) and (right: anchor(--anchor-preview-section right)) {
     .markdown-preview-view.banner:is(.banner-slant, .banner-slope) .inline-title {
-        top: calc(anchor(--anchor-preview-section top) + var(--banner-height) - var(--file-margins-block) - 1em - var(--banner-title-shadow-size));
+        top: calc(
+            anchor(--anchor-preview-section top) + var(--banner-height) - var(--file-margins-block) -
+                1em - var(--banner-title-shadow-size)
+        );
         right: anchor(--anchor-preview-section right, var(--file-margins-inline));
     }
 }
-
 
 @media print {
     .print .markdown-preview-view.banner:is(.banner-slant, .banner-slope) #{$img-embed-sel-print} {
         @include image-banner-slope;
     }
 }
-
 
 .markdown-source-view.banner.banner-edit-hide,
 .fas-banner-edit-hide .markdown-source-view.banner {
@@ -206,14 +214,20 @@ body {
         img {
             display: none;
         }
-        &:hover img {
-            position: absolute;
-            display: block;
-        }
         &::after {
             content: "🖼️ banner";
             font-size: 12px;
             color: var(--text-muted);
+        }
+    }
+}
+
+@media (hover: hover) {
+    .markdown-source-view.banner.banner-edit-icon,
+    .fas-banner-edit-icon .markdown-source-view.banner {
+        .cm-contentContainer > div > .image-embed:nth-child(1 of div.image-embed):hover img {
+            position: absolute;
+            display: block;
         }
     }
 }
