--- a/scss/plugins/community/_highlight-active-folder-section.scss
+++ b/scss/plugins/community/_highlight-active-folder-section.scss
@@ -1,5 +1,5 @@
 body {
-	// custom
+    // custom
     --active-file-bullet-size: 6px;
 }
 
@@ -28,15 +28,13 @@ body {
     }
 
     .highlighted-parent-folder > .nav-folder-title {
-        border-radius:var(--radius-s);
+        border-radius: var(--radius-s);
         margin-bottom: var(--size-2-1);
         color: var(--nav-item-color);
         font-weight: var(--nav-item-weight);
     }
 
-    .highlighted-folder > .nav-folder-title:hover,
     .highlighted-folder > .nav-folder-title.is-being-dragged,
-    .highlighted-parent-folder > .nav-folder-title:hover,
     .highlighted-parent-folder > .nav-folder-title.is-being-dragged {
         color: var(--nav-item-color-hover);
     }
@@ -55,9 +53,7 @@ body {
         color: inherit;
     }
 
-    .highlighted-folder .nav-file-title:hover,
     .highlighted-folder .nav-file-title.is-being-dragged,
-    .highlighted-parent-folder .nav-file-title:hover,
     .highlighted-parent-folder .nav-file-title.is-being-dragged {
         color: inherit;
     }
@@ -69,7 +65,6 @@ body {
     .margin-left-10 {
         margin-left: 0px;
     }
-
 
     .highlighted-intermediate-folder > .nav-folder-title::after,
     .highlighted-folder > .nav-folder-title::after,
@@ -93,5 +88,19 @@ body {
         height: var(--active-file-bullet-size, 6px);
         border-radius: 50%;
         background-color: currentColor;
+    }
+}
+
+@media (hover: hover) {
+    .nav-files-container {
+        .highlighted-folder > .nav-folder-title:hover,
+        .highlighted-parent-folder > .nav-folder-title:hover {
+            color: var(--nav-item-color-hover);
+        }
+
+        .highlighted-folder .nav-file-title:hover,
+        .highlighted-parent-folder .nav-file-title:hover {
+            color: inherit;
+        }
     }
 }
