--- a/scss/window/_file-title-hover.scss
+++ b/scss/window/_file-title-hover.scss
@@ -16,8 +16,12 @@ body {
     .mod-root .view-header > * {
         overflow: hidden;
     }
+}
 
-    .mod-root .view-header:hover {
-        height: var(--header-height);
+@media (hover: hover) {
+    @container style(--show-note-header-on-hover: enable) {
+        .mod-root .view-header:hover {
+            height: var(--header-height);
+        }
     }
 }
