--- a/scss/window/_tab-headers.scss
+++ b/scss/window/_tab-headers.scss
@@ -23,9 +23,11 @@ body {
     --icon-opacity-hover: 1;
 }
 
-// Full opacity when the header container is hovered
-.workspace-tab-header-container:hover {
-    --icon-opacity: var(--icon-opacity-hover);
+@media (hover: hover) {
+    // Full opacity when the header container is hovered
+    .workspace-tab-header-container:hover {
+        --icon-opacity: var(--icon-opacity-hover);
+    }
 }
 
 // ---------- FILE TABS ----------
@@ -123,8 +125,10 @@ body:not(.is-frameless) .mod-root .workspace-tab-header:not(.is-active) .workspa
     background-color: var(--tab-color);
 }
 
-.workspace .mod-root .workspace-tabs.mod-stacked .workspace-tab-container .workspace-tab-header:hover {
-    background-color: var(--tab-color-hover);
+@media (hover: hover) {
+    .workspace .mod-root .workspace-tabs.mod-stacked .workspace-tab-container .workspace-tab-header:hover {
+        background-color: var(--tab-color-hover);
+    }
 }
 
 // ---------- NAV HEADER ----------
