--- a/scss/window/sidebars/_fas-bookmark-tabs.scss
+++ b/scss/window/sidebars/_fas-bookmark-tabs.scss
@@ -18,10 +18,6 @@ body {
             margin-top: var(--workspace-top-margin);
         }
 
-        .workspace-tab-header-container:hover {
-            --icon-opacity: var(--icon-opacity-inactive);
-        }
-
         .workspace-tab-header {
             background-color: var(--workspace-background);
             clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 80%, 0 100%);
@@ -29,10 +25,6 @@ body {
 
         .workspace-tab-header.is-active {
             background-color: var(--color-accent);
-        }
-
-        .workspace-tab-header.is-active:hover {
-            background-color: var(--color-accent-1);
         }
 
         .workspace-tabs:not(.mod-top) .workspace-tab-header-container-inner {
@@ -45,6 +37,20 @@ body {
 
         .workspace-leaf {
             padding-top: calc(var(--header-height) - var(--workspace-top-margin));
+        }
+    }
+}
+
+@media (hover: hover) {
+    @container not style(--fas-bookmark-tabs: disable) {
+        .mod-sidedock {
+            .workspace-tab-header-container:hover {
+                --icon-opacity: var(--icon-opacity-inactive);
+            }
+
+            .workspace-tab-header.is-active:hover {
+                background-color: var(--color-accent-1);
+            }
         }
     }
 }
